# LinXust

./: .gitignore  API_NAPI.md  FORMAT_LXT.md  README.md  SPEC.md  TASKS.md  package.json
.github/: copilot-instructions.md
docs/: API_NAPI.md  ARCHITECTURE.md  FORMAT_LXT.md  SPEC.md  TASKS.md
electron/: main.cjs  native-bridge.cjs  preload.cjs  verify-native-bridge.cjs
frontend/: biome.json  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  env.d.ts  index.css  main.tsx
frontend/src/lib/: bridge.ts  observability.ts
native/: Cargo.toml  index.d.ts  index.js  package.json
native/src/: lib.rs  lxt.rs  lxt_streaming.rs
